--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css">
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
-    <body>
+    <body class="dashboardBody">
         <header class="header" id="header">
             <div class="headerContainer">
                 <a herf="" class="headerLogo">
@@ -22,13 +22,13 @@
         <nav class="sidebar">
             <div class="sidebarContainer">
                 <div class="userSection">
-                    <img src="" alt="userImage">
+                    <img src="assets/image/profile.png" alt="userImage">
                     <div class="userDetail">
                         <h2>John Willam</h2>
                         <span>john@email.com</span>
                     </div>
                 </div>
-                <div>
+                <div class="sidebarContent">
                     <div class="siderbarTitle">
                         Manage
                     </div>
@@ -42,8 +42,6 @@
                             <span>Calendar</span>
                         </a>
                     </div>
-                </div>
-                <div>
                     <div class="siderbarTitle">
                         Settings
                     </div>
@@ -57,19 +55,19 @@
                             <span>Notifications</span>
                         </a>
                     </div>
-                </div>
-                <div class="sidebarList">
-                    <a class="siderbar_link" href="#">
-                        <i class="ri-menu-line"></i>
-                        <span>Theme</span>
-                    </a>
-                    <a class="siderbar_link" href="#">
-                        <i class="ri-menu-line"></i>
-                        <span>Logout</span>
-                    </a>
+                    <div class="sidebarList">
+                        <a class="siderbar_link" href="#">
+                            <i class="ri-menu-line"></i>
+                            <span>Theme</span>
+                        </a>
+                        <a class="siderbar_link" href="#">
+                            <i class="ri-menu-line"></i>
+                            <span>Logout</span>
+                        </a>
+                    </div>
                 </div>
             </div>
         </nav>
-        <main class="mainContainer">/main>
+        <main class="mainContainer"></main>
     </body>
 </html>
