--- a/dashboard.html
+++ b/dashboard.html
@@ -6,6 +6,9 @@
         <!-----========= Remixicon=============--->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css">
         <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
     </head>
     <body class="dashboardBody">
         <header class="header" id="header">
@@ -29,33 +32,53 @@
                     </div>
                 </div>
                 <div class="sidebarContent">
-                    <div class="siderbarTitle">
-                        Manage
+                    <div>
+                        <div class="siderbarTitle">
+                            Manage
+                        </div>
+                        <div class="sidebarList">
+                            <a class="siderbar_link" href="#">
+                                <i class="ri-menu-line"></i>
+                                <span>Dashboard</span>
+                            </a>
+                            <a class="siderbar_link" href="#">
+                                <i class="ri-menu-line"></i>
+                                <span>My Wallet</span>
+                            </a>
+                            <a class="siderbar_link" href="#">
+                                <i class="ri-menu-line"></i>
+                                <span>Calendar</span>
+                            </a>
+                            <a class="siderbar_link" href="#">
+                                <i class="ri-menu-line"></i>
+                                <span>Recent Transactions</span>
+                            </a>
+                            <a class="siderbar_link" href="#">
+                                <i class="ri-menu-line"></i>
+                                <span>Statics</span>
+                            </a>
+                        </div>
                     </div>
-                    <div class="sidebarList">
-                        <a class="siderbar_link" href="#">
-                            <i class="ri-menu-line"></i>
-                            <span>Dashboard</span>
-                        </a>
-                        <a class="siderbar_link" href="#">
-                            <i class="ri-menu-line"></i>
-                            <span>Calendar</span>
-                        </a>
+                    <div>
+                        <div class="siderbarTitle">
+                            Settings
+                        </div>
+                        <div class="sidebarList">
+                            <a class="siderbar_link" href="#">
+                                <i class="ri-menu-line"></i>
+                                <span>Settings</span>
+                            </a>
+                            <a class="siderbar_link" href="#">
+                                <i class="ri-menu-line"></i>
+                                <span>My Messages</span>
+                            </a>
+                            <a class="siderbar_link" href="#">
+                                <i class="ri-menu-line"></i>
+                                <span>Notifications</span>
+                            </a>
+                        </div>
                     </div>
-                    <div class="siderbarTitle">
-                        Settings
-                    </div>
-                    <div class="sidebarList">
-                        <a class="siderbar_link" href="#">
-                            <i class="ri-menu-line"></i>
-                            <span>My Messages</span>
-                        </a>
-                        <a class="siderbar_link" href="#">
-                            <i class="ri-menu-line"></i>
-                            <span>Notifications</span>
-                        </a>
-                    </div>
-                    <div class="sidebarList">
+                    <div class="sidebarActions">
                         <a class="siderbar_link" href="#">
                             <i class="ri-menu-line"></i>
                             <span>Theme</span>
