--- a/dashboard.html
+++ b/dashboard.html
@@ -11,17 +11,6 @@
         <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
     </head>
     <body class="dashboardBody">
-        <header class="header" id="header">
-            <div class="headerContainer">
-                <a herf="" class="headerLogo">
-                    <i class="ri-cloud-fill"></i>
-                    <span>Cloud</span>
-                </a>
-                <button class="headerToggle" id="header_toggle">
-                    <i class="ri-menu-line"></i>
-                </button>
-            </div>
-        </header>
         <nav class="sidebar">
             <div class="sidebarContainer">
                 <div class="userSection">
@@ -91,6 +80,17 @@
                 </div>
             </div>
         </nav>
-        <main class="mainContainer"></main>
+        
+        <main class="mainContainer"  id="header">
+            <div class="headerContainer">   
+                <button class="headerToggle" id="header_toggle">
+                    <i class="ri-menu-line"></i>
+                </button>
+                <a herf="" class="headerLogo">
+                    <i class="ri-cloud-fill"></i>
+                    <span>Cloud</span>
+                </a>
+            </div>
+        </main>
     </body>
 </html>
